--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello world.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
+</head>
+<body>
+    <div class="wrapper">
+        <img src="/images/162329663_10159532437212112_772404292871884942_n.jpg" alt="">
+        <p class="info"></p>
+        <button class="button">Hjälp mig!</button>
+    </div>
+    <script src="js/js.js"></script>
+</body>
+</html>
